BUG: fixed CSS so it's an or statement for div left margins

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -14,7 +14,7 @@ div.section > div:not(.section):not(.sidebar)
 		width: 55%;
 	}
 
-div.wy-nav-content div.container.sphinx-bs {
+div.wy-nav-content, div.container.sphinx-bs {
 	margin-left:  0;
 }
 
