fix CSS stylking allowing table text to wrap

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -60,3 +60,8 @@ blockquote.epigraph p.attribution {
 	font-weight: 400;
 	font-style: normal;
 }
+
+/* override table no-wrap */
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal;
+}
