BUG: sidebars do not stack

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -23,7 +23,8 @@ div.wy-nav-content, div.container.sphinx-bs {
 
 div.sidebar, dl.footnote {
 	width:  40% !important;
-	display: inline-block;
+	display: inline-block !important;
+	clear: right !important;
 }
 
 dl.footnote {
