--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -47,6 +47,10 @@ blockquote {
 	border-left: solid 1px #808080;
 }
 
+li blockquote {
+	border-left: None;
+}
+
 blockquote p.attribution {
 	text-align: right;
     width: 95%;
