--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@1,700&display=swap');
+
 .wy-nav-content {
 	max-width: 100%;
 }
@@ -20,18 +25,20 @@ div.section > div:not(.section):not(.sidebar)
 		/* Constrain width for direct descendants of a div */
 		width: 55%;
 		display: inline-block;
-		font-family: "Roboto", sans-serif;
+		font-family: 'Atkinson Hyperlegible', sans-serif;
 	}
 
 div.wy-nav-content, div.container.sphinx-bs {
 	margin-left:  0;
 	display: inline-block;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 div.sidebar, dl.footnote {
 	width:  40% !important;
 	display: inline-block !important;
 	clear: right !important;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 dl.footnote {
@@ -42,12 +49,11 @@ dl.footnote {
 	border-left: none;
 	border-top: none;
 	border-bottom: none;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700');
-@import url('https://fonts.googleapis.com/css?family=Roboto');
 blockquote {
-	font-family: "Roboto Condensed", sans-serif;
+	font-family: 'Atkinson Hyperlegible', sans-serif;
 	margin-left: 1em;
 	margin-right: 2em;
 	border-left: solid 1px #808080;
@@ -55,24 +61,28 @@ blockquote {
 
 li blockquote {
 	border-left: None;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 blockquote p.attribution {
 	text-align: right;
     width: 95%;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 blockquote.epigraph {
 	font-size: 1.125rem;
 	font-weight: 300;
 	font-style: oblique;
-	padding-left: 1em
+	padding-left: 1em;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 blockquote.epigraph p.attribution {
 	font-size: 0.75rem;
 	font-weight: 400;
 	font-style: normal;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 /* override table no-wrap */
@@ -84,6 +94,7 @@ blockquote.epigraph p.attribution {
 	list-style: none !important;
 	counter-increment: section-counter;
 	margin-left: 8px !important;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 .section ol li p {
