--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -1,60 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@1,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700');
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+@import url('https://fonts.bunny.net/css?family=atkinson-hyperlegible:400,400i,700,700i&display=swap');
+@import url('https://fonts.bunny.net/css?family=roboto-mono:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
 
-.wy-nav-content {
-	max-width: 100%;
-}
-
-div.section > p,
-div.section > h1,
-div.section > h2,
-div.section > h3,
-div.section > h4,
-div.section > h5,
-div.section > h6,
-div.section > hr,
-div.section > dl:not(.footnote),
-div.section > ol,
-div.section > ul,
-div.section > blockquote, 
-div.section > div:not(.section):not(.sidebar)
+body
 	{
-		/* Constrain width for direct descendants of a div */
-		width: 55%;
-		display: inline-block;
 		font-family: 'Atkinson Hyperlegible', sans-serif;
 	}
 
-
-div.wy-nav-content, div.container.sphinx-bs {
-	margin-left:  0;
-	display: inline-block;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-}
-
-div.sidebar, dl.footnote {
-	width:  40% !important;
-	display: inline-block !important;
-	clear: right !important;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-}
-
-dl.footnote {
-	float: right;
-	clear: both;
-	text-align: left;
-	border-right: solid 1px #808080;
-	border-left: none;
-	border-top: none;
-	border-bottom: none;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-}
-
+p, h1, h2, h3, h4, h5, h6, hr, ol, ul, blockquote
+	{
+		font-family: 'Atkinson Hyperlegible', sans-serif !important;
+	}
 blockquote {
 	font-family: 'Atkinson Hyperlegible', sans-serif;
 	margin-left: 1em;
@@ -62,7 +17,7 @@ blockquote {
 	border-left: solid 1px #808080;
 }
 
-li blockquote {
+/* li blockquote {
 	border-left: None;
     font-family: 'Atkinson Hyperlegible', sans-serif;
 }
@@ -88,10 +43,6 @@ blockquote.epigraph p.attribution {
     font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
-/* override table no-wrap */
-.wy-table-responsive table td, .wy-table-responsive table th {
-    white-space: normal;
-}
 
 .section ol li {
 	list-style: none !important;
@@ -107,15 +58,8 @@ blockquote.epigraph p.attribution {
 	content: counter(section-counter) ". ";
 	font-weight: bold;
 	position: absolute;
-}
+} */
 
-div.section > table
-{
-	/* Constrain width for direct descendants of a div */
-	width: 55%;
-	display: inline-block;
-	font-family: 'Roboto Mono' !important, monospace;
-}
 
 .c3table table {margin: 10px 0; font-family: monospace !important;}
 
